# cryptonaire-reports

./: .gitignore  README.md  pyproject.toml
crypto_exchanges_portfolio_reports/: cli.py
crypto_exchanges_portfolio_reports/exchanges/: binance.py  bing_x.py  bybit.py  exchange.py  gate_io.py
crypto_exchanges_portfolio_reports/reports/: portfolio.py  report.py
crypto_exchanges_portfolio_reports/utils/: functions.py
crypto_exchanges_reports/: cli.py
crypto_exchanges_reports/exchanges/: binance.py  bing_x.py  bybit.py  gate.py
crypto_exchanges_reports/reports/: portfolio.py  report.py
crypto_exchanges_reports/utils/: exchange_mappings.py  functions.py
cryptonaire_reports/: cli.py
cryptonaire_reports/exchanges/: binance.py  bing_x.py  bybit.py  coinbase.py  exchange.py  gate.py
cryptonaire_reports/networks/: ethereum.py  network.py  solana.py
cryptonaire_reports/other/: manual_balances.py
cryptonaire_reports/reports/: portfolio.py  report.py
cryptonaire_reports/utils/: coin_market_cap.py  exchange_mappings.py  functions.py  logger.py  mappings.py  parse_functions.py  symbol_corrector.py
scripts/windows/: crypto_reports.bat  cryptonaire_reports_configure.bat  run_crypto_reports.bat
templates/: api_keys_template.config  cryptonaire_reports_template.config  exchange_api_keys_test_template.config
