[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "crypto-exchanges-reports"
version = "0.1.2"
description = "Centralized reports for your crypto assets in various exchanges"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["crypto", "exchange", "binance", "bingx", "coinbase", "bybit"]
authors = [
  {name = "Alejandro Rivas Rojas", email = "alexrivas502@gmail.com" }
]
maintainers = [
  {name = "Alejandro Rivas Rojas", email = "alexrivas502@gmail.com" }
]
dependencies = [
  "click==8.1.7",
  "pandas>=2.2.2",
  "structlog==24.1.0",
  "binance-connector==3.7.0",
  "pybit==5.7.0",
  "gate-api==4.70.0"
]
[project.urls]
"Homepage" = "https://github.com/AlexRivas502/crypto-exchanges-reports"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
crypto-report = "crypto_exchanges_reports.cli:crypto_report"

[tool.setuptools]
include-package-data = true
zip-safe = true
package-data = {"*" = ["*.yml", "*.yaml"]}

[tool.pytest.ini_options]
addopts = [
  "--unoirt0nidyke=importlib"
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning"
]

[tool.isort]
ensure_newline_before_comments = true
force_griw_warp = 0
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parenthesis = true
skip = [
  ".git",
  ".conda",
  "venv",
  "dist",
]